--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -82,12 +82,20 @@ p {
     width: 100%;
 }
 
+.img-gallery {
+    display: none;
+
+}
+
+.img-desktop {
+    display: none;
+}
+
 /* -------- buttons  ------------*/
 
 
 .btn {
-    background-color: var(--clr-orange);
-    color: var(--clr-white);
+
     border: none;
     border-radius: .8rem;
     width: 100%;
@@ -96,22 +104,24 @@ p {
     font-weight: 700;
     transition: 0.2s;
 
-    &:hover {
-        box-shadow: 0px 9px 46px -17px var(--clr-orange);
+    &--main {
+        background-color: var(--clr-orange);
+        color: var(--clr-white);
+
+        &:hover {
+            box-shadow: 0px 9px 46px -17px var(--clr-orange);
+        }
+    }
+
+    &--counter {
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        padding: 2rem;
+        background-color: var(--clr-light-grayish-blue);
     }
 }
 
-.btn-counter {
-    border-radius: .8rem;
-    font-weight: 700;
-    font-size: 1rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    padding: 2rem;
-    width: 100%;
-    background-color: var(--clr-light-grayish-blue);
-}
 
 .pricing-box {
     display: flex;
@@ -150,9 +160,84 @@ p {
 }
 
 
-.main {
+.info-box {
     min-height: 50vh;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+}
+
+/* -------- Media-queries  ------------*/
+
+@media (min-width: 80rem) {
+
+    /* -------- buttons  ------------*/
+    .btn {
+        padding: 1.2rem;
+
+        &--main {
+            flex-basis: 64%;
+        }
+
+        &--counter {
+            flex-basis: 34%;
+        }
+    }
+
+    .btn-container-box {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    header {
+        display: none;
+    }
+
+    .hidden {
+        display: none;
+    }
+
+    .split {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    /* -------- images  ------------*/
+
+    .img-desktop {
+        display: flex;
+        flex-direction: column;
+        border: 1px solid red;
+        padding: 1rem;
+        flex: 1;
+
+        .img-desktop-header {
+            border: 1px solid blue;
+
+        }
+
+        .img-gallery {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-between;
+            list-style: none;
+            padding: 0;
+            border: 3px solid black;
+
+            .product-img-main {
+                border-radius: 1rem;
+                // flex: 1;
+                flex-basis: 10px;
+            }
+        }
+    }
+
+
+    .info-box {
+        border: 3px solid yellow;
+        flex: 1;
+    }
+
+
 }
