--- a/src/sass/nav.scss
+++ b/src/sass/nav.scss
@@ -12,6 +12,7 @@ nav {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     // padding: 1rem 0 1rem 0;
 
     &--1 {
@@ -33,4 +34,35 @@ nav {
 
 .logo {
     height: 100%;
+}
+
+.desktop-nav {
+    display: none;
+}
+
+@media (min-width: 80rem) {
+    nav {
+        border-bottom: 1px solid var(--clr-light-grayish-blue);
+    }
+
+    .desktop-nav {
+        list-style: none;
+        padding: 0;
+        display: flex;
+        align-items: center;
+    }
+
+    .nav-item-box {
+        ul {
+            li {
+                padding: .5rem;
+            }
+        }
+
+        &--1 {
+
+            flex-basis: 30rem;
+        }
+
+    }
 }
