--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -25,6 +25,11 @@ html {
     font-family: var(--ff-primary);
 }
 
+body {
+    z-index: 0;
+    position: relative;
+}
+
 body,
 h1,
 h2,
@@ -163,19 +168,74 @@ p {
 
 
 .info-box {
-    min-height: 60vh;
+    min-height: 50vh;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
 }
 
+/* -------- Modal  ------------*/
+.modal {
+    width: 100%;
+    height: 100vh;
+    overflow: auto;
+    background-color: rgb(0, 0, 0, .7);
+    position: absolute;
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    // display: none;
+}
 
+.preview {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.arrow {
+    background-color: var(--clr-white);
+    width: 3rem;
+    height: 3rem;
+    border-radius: 50%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+}
+
+.arrow-left {
+    right: 450px;
+}
+
+.arrow-right {
+    left: 450px;
+}
+
+.close-icon {
+    cursor: pointer;
+    width: 1.5rem;
+    filter: brightness(0) invert(1);
+    padding-bottom: 1rem;
+    align-self: flex-end;
+}
+
+/* -------- hidden  ------------*/
+.hidden {
+    display: none;
+}
 
 /* -------- Media-queries  ------------*/
 
 @media (min-width: 60rem) {
+
+
     .test-1 {
-        border: 4px solid green;
+        // For testing: border: 4px solid green;
         min-height: 85vh;
         min-width: 50%;
         display: flex;
@@ -232,17 +292,15 @@ p {
     .img-desktop {
         display: flex;
         flex-direction: column;
-        border: 1px solid red;
+        // border: 1px solid red;
         padding: 1rem;
-        flex: 1;
         align-items: center;
-        max-height: 70vh;
-        max-width: 75%;
-
+        width: min(100%, 32rem);
 
         .img-desktop-header {
-            border: 3px solid blue;
+            width: min(100%, 32rem);
             border-radius: 15px;
+            margin-bottom: 2rem;
         }
 
         .img-gallery {
@@ -250,28 +308,22 @@ p {
             flex-direction: row;
             align-items: center;
             justify-content: space-between;
-            list-style: none;
-            padding: 0;
-            border: 3px solid black;
-            width: 500px;
-
+            width: min(100%, 32rem);
 
             .product-img-main {
-                // border-radius: .9rem;
-                // flex-basis: 10px;
-                max-height: 6rem;
-                // max-width: 7rem;
+                width: min(100%, 90px);
                 border-radius: 0.5rem;
+                cursor: pointer;
+                //for hover ---------
+                // outline: 3px solid var(--clr-orange);
+                // filter: grayscale(100%);
+                // border: 2px solid var(--clr-orange);
             }
         }
     }
 
-
     .info-box {
-        border: 3px solid yellow;
         flex: 1;
         max-width: 90%;
     }
-
-
 }
